<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.RegisterFragment">


    <LinearLayout
        android:id="@+id/register_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="username"
            android:ems="10"
            android:hint="@string/username_text"
            android:inputType="text" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/email_text"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:hint="@string/password_text"
            android:autofillHints="password"
            android:ems="10"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/et_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:hint="@string/password_confirm_text"
            android:autofillHints="password"
            android:ems="10"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/register_text"
            app:strokeColor="#E0E0E0"
            app:strokeWidth="1dp"
            app:cornerRadius="6dp" />

        <Button
            android:id="@+id/btn_goTo_login"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:text="@string/login_text"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBar_register"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>