<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.LoginFragment">

    <LinearLayout
        android:id="@+id/login_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Email -->
        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/email_text"
            android:inputType="textEmailAddress" />

        <!-- Password -->
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/password_text"
            android:inputType="textPassword" />

        <!-- Login button -->
        <Button
            android:id="@+id/btn_login"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:text="@string/login_text"
            app:strokeColor="#E0E0E0"
            app:strokeWidth="1dp"
            app:cornerRadius="6dp" />

        <!-- Buttons layout - Forgot password, Register -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <!-- Forgot password button -->
            <Button
                android:id="@+id/btn_forgot_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/forgot_password_text"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textStyle="bold" />

            <!-- Register button-->
            <Button
                android:id="@+id/btn_goTo_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_text"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:textStyle="bold" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar_login"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_gravity="center_horizontal"
            android:visibility="gone"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>